src/objects/APXTConga4__Connected_App_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>APXTConga4__Connected_App_Name_SF1__c</fullName>
        <defaultValue>&quot;Conga_Composer_SF1_EU&quot;</defaultValue>
        <label>Connected App Name SF1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Connected_App_Name__c</fullName>
        <label>Connected App Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Hostname__c</fullName>
        <label>Hostname</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Connected App Setting</label>
    <pluralLabel>Connected App Settings</pluralLabel>
</CustomObject>